<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="cristian_sedano.curriculum.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <ScrollView
        android:scrollbars="vertical"
        android:paddingTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="57dp"
                android:text="@string/textView_summary"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sum_explication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/textView_experience"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/exp_explication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/textView_exp_expli"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/education"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/textView_education"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edu_explication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/skills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/textView_skills"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/skills_explication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/interests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/textView_interests"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/int_explication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/textView_int_explic"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/textView_reference"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ref_explication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

<RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/linkedin"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/inkedin" />

        <Button
            android:id="@+id/github"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/linkedin"
            android:background="@drawable/github" />

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_navigation_layout"
        app:menu="@menu/menu_nav" />

</android.support.v4.widget.DrawerLayout>
